k8s/backend-deploment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: roohmeiy/three-tier-nodejs-mysql-backend:ing
          ports:
            - containerPort: 5000
