k8s/frontend-deploymnet.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: roohmeiy/three-tier-nodejs-mysql-frontend:alb2
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
