k8s/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-container
spec:
  clusterIP: None 
  selector:
    app: mysql-container
  ports:
    - port: 3306
      targetPort: 3306
